<resources>
    <string name="app_name">Fragment</string>
    <string name="lada">Лада</string>
    <string name="date">ВАШИ ЗАМЕТКИ</string>
    <string name="description_of_the_note">Описание</string>
    <string name="nissan">Ниссан</string>
    <string name="toyota">Тойота</string>
    <string name="camaro">Камаро</string>
    <string name="Notes">ЗАМЕТКИ</string>
    <string name="RusNotes">Введите ваши заметки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_info_notes">ЗАГРУЗИТЬ РИСУНОК</string>
    <string name="array_list">Список заметок</string>
    <string name="auto">Автомобили</string>
    <string name="auto_notes">Заметки по авто</string>
    <string name="search">search</string>
    <string name="item_two">ItemTwo</string>
    <string name="item_one">ItemOne</string>
    <string name="avto_info">ОПИСАНИЕ</string>
    <string name="snack_bar">SNACKBAR</string>
    <string name="dialog">DIALOG</string>
    <string name="custom_dialog">CUSTOM DIALOG</string>
    <string name="Custom_dialog">ЗАГОЛОВОК</string>
    <string name="dialog_list">List Dialog</string>
    <string name="dialog_single_choice">Dialog Single Choice</string>
    <string name="dialog_multiple_choice">Dialog Multiple Choice</string>
    <string name="dialog_custom_dialog_fragment">Dialog custom Dialog fragment (сохранял состояние)</string>
    <string name="buttonbottomview">ButtonBottomView</string>
    <string name="button_bottom_view">ButtonBottomView</string>
    <string name="Heading">Заголовок</string>
    <string name="MyNotes">bottom_action_navigation</string>
    <string name="notes_bottom_list">Notes List</string>
    <string name="info">Info</string>
    <string name="info_bottom_fr">Тут пока пусто</string>
    <string name="SelectedNotesList">Notes List</string>
    <string name="message">message</string>
    <string name="save">save</string>
    <string name="title">title</string>

    <string-array name="notesList">
        <item>notesOne</item>
        <item>notesTwo</item>
        <item>notesThree</item>
        <item>notesFor</item>
        <item>notesFive</item>
    </string-array>


</resources>