<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/snack_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/snack_bar" />

        <Button
            android:id="@+id/dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/dialog" />

        <Button
            android:id="@+id/custom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/custom_dialog" />

        <Button
            android:id="@+id/dialog_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/dialog_list" />

        <Button
            android:id="@+id/dialog_single_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/dialog_single_choice" />

        <Button
            android:id="@+id/dialog_multiple_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/dialog_multiple_choice" />

        <Button
            android:id="@+id/dialog_custom_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/dialog_custom_dialog_fragment" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
