<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity2"
        android:orderInCategory="2"
        android:title="menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/select_fragment_activity2"
        android:icon="@drawable/ic_baseline_filter_none_24"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_select_fragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="3"
        android:title="@string/item_one"
        app:showAsAction="never" />
    <item
        android:id="@+id/item2_select_fragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="4"
        android:title="@string/item_two"
        app:showAsAction="never" />

</menu>